--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "we-network",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/HoangHuyKG/WEHUY.git",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
     "clsx": "^1.1.1",
+    "gh-pages": "^3.2.3",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
